<resources>
    <string name="app_name">WizardSpaceBattleApp</string>
    <string name="action_settings">Settings</string>
    <string name="game_title">Wizard Space Battle</string>
    <string name="title_activity_game_screen">GameScreen</string>
    <string name="title_activity_settings_screen">SettingsScreen</string>





    <string name="game_blurb">To play this game with friends, you must sign in with Google.</string>
    <string name="single_player">Single Player</string>
    <string name="single_player_explanation">Get some practice!</string>
    <string name="quick_game">Quick game</string>
    <string name="invite_players">Invite friends</string>
    <string name="see_invitations">See invitations</string>
    <string name="quick_game_explanation">Challenge a random opponent.</string>
    <string name="invite_players_explanation">Invite friends to play a game.</string>
    <string name="see_invitations_explanation">See who is inviting you right now.</string>
    <string name="inv_popup_text">Incoming invitation!</string>
    <string name="accept_popup_invite">Accept!</string>
    <string name="sign_out">Sign Out</string>
    <string name="please_wait">Please wait&#8230;</string>
    <string name="instructions">Click the button as fast as you can!</string>
    <string name="game_problem">An error occurred while starting the game. Please try again.</string>
    <string name="click_me">Click me!</string>
    <string name="is_inviting_you">is challenging you to a game!</string>
    <string name="signin_other_error">There was an issue with sign in. Please try again later.</string>
</resources>
