<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <!-- SIGN-IN SCREEN -->
    <LinearLayout android:id="@+id/screen_sign_in" style="@style/LLScreen">
        <TextView style="@style/GameTitle" />
        <TextView style="@style/GameBlurb" />


        <com.google.android.gms.common.SignInButton android:id="@+id/button_sign_in"
            style="@style/SignInButton" />
    </LinearLayout>

    <!-- MAIN SCREEN -->
    <RelativeLayout android:id="@+id/screen_main" style="@style/LLScreen">
        <!--<TextView style="@style/GameTitle" />-->

        <Button android:id="@+id/button_quick_game"
            style="@style/MainScreenButton"
            android:text="@string/quick_game" />

        <Button android:id="@+id/button_invite_players"
            style="@style/MainScreenButton"
            android:text="@string/invite_players"
            android:layout_below="@id/button_quick_game"/>

        <Button android:id="@+id/button_see_invitations"
            style="@style/MainScreenButton"
            android:text="@string/see_invitations"
            android:layout_below="@id/button_invite_players"/>

        <Button android:id="@+id/button_sign_out"
            style="@style/SignOutButton"
            android:text="@string/sign_out"
            android:layout_below="@id/button_see_invitations"/>
        <TextView style="@style/MainScreenButtonBlurb"
            android:text="NOTE: You are always player 1"
           android:layout_below="@id/button_sign_out"
            android:id="@+id/player1Note"/>
        <TextView style="@style/MainScreenButtonBlurb"
            android:text="Best played over WiFi"
            android:layout_below="@id/player1Note" />
    </RelativeLayout>

    <!-- INVITATION POPUP -->
    <LinearLayout android:id="@+id/invitation_popup" style="@style/InvPopup">
        <TextView android:id="@+id/incoming_invitation_text" style="@style/InvPopupText" />
        <Button android:id="@+id/button_accept_popup_invitation"
            style="@style/InvPopupButton"
            android:text="@string/accept_popup_invite" />
    </LinearLayout>

    <!-- "PLEASE WAIT" SCREEN -->
    <LinearLayout android:id="@+id/screen_wait" style="@style/LLScreen">
        <TextView style="@style/Blurb" android:text="@string/please_wait" />
    </LinearLayout>

    <!-- GAMEPLAY SCREEN -->

    <FrameLayout
        android:id="@+id/screen_game"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!--<TextView
                android:id="@+id/p1ScoreText"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_marginLeft="20dp"
                android:layout_weight="0.5"
                android:text="P1 Score"
                android:textColor="@color/colorAccent"
                />

            <TextView
                android:id="@+id/p2ScoreText"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_gravity="end"
                android:layout_marginRight="20dp"
                android:layout_weight="0.5"
                android:text="P2 Score"
                android:textAlignment="textEnd"
                android:textColor="@color/colorAccent"
                />-->
            <RelativeLayout
                android:id="@+id/leftRelativeLayout"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:text="P1 Score: 0"
                    android:textColor="@color/colorAccent"
                    android:id="@+id/player1Score"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:text="P1 Health:"
                    android:textColor="@color/colorAccent"
                    android:id="@+id/player1Health"
                    android:layout_below="@id/player1Score"/>
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/rightRelativeLayout"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="end"
                    android:paddingRight="10dp"
                    android:text="P2 Score: 0"
                    android:textAlignment="textEnd"
                    android:textColor="@color/colorAccent"
                    android:id="@+id/player2Score"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"
                    android:text="P2 Health:"
                    android:textColor="@color/colorAccent"
                    android:id="@+id/player2Health"
                    android:textAlignment="textEnd"
                    android:gravity="end"
                    android:paddingRight="10dp"
                    android:layout_below="@id/player2Score"/>
            </RelativeLayout>
        </LinearLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/menu_layout"
            android:animateLayoutChanges="true"
            >
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:elevation="8dp"
                android:src="@drawable/ic_action_pause"
                android:background="@null"
                android:id="@+id/pauseButton"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/pauseButton"
                android:id="@+id/subMenu"
                android:visibility="gone">
                <!-- android:background="#80000000"-->
                <com.rey.material.widget.Button
                    android:id="@+id/resumeButton"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center_horizontal"
                    rd_enable="true"
                    android:text="Resume" />
                <com.rey.material.widget.Button
                    android:id="@+id/backMenuButton"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="10dp"
                    android:layout_below="@id/resumeButton"
                    rd_enable="true"
                    android:text="Menu" />
            </RelativeLayout>
        </RelativeLayout>
    </FrameLayout>
</FrameLayout>